--- a/PolarGrabber/App.config
+++ b/PolarGrabber/App.config
@@ -13,6 +13,12 @@
             <setting name="webURL" serializeAs="String">
                 <value>http://localhost:8856/</value>
             </setting>
+            <setting name="logFilename" serializeAs="String">
+                <value>polarlog_{0:yyyy-MM-dd_hh-mm-ss}.txt</value>
+            </setting>
+            <setting name="logLine" serializeAs="String">
+                <value>{0:yyyy-MM-dd_hh-mm-ss};{1}</value>
+            </setting>
         </PolarGrabber.Properties.Settings>
     </applicationSettings>
 </configuration>
