--- a/PolarGrabber/Properties/Settings.settings
+++ b/PolarGrabber/Properties/Settings.settings
@@ -5,5 +5,11 @@
     <Setting Name="webURL" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://localhost:8856/</Value>
     </Setting>
+    <Setting Name="logFilename" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">polarlog_{0:yyyy-MM-dd_hh-mm-ss}.txt</Value>
+    </Setting>
+    <Setting Name="logLine" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">{0:yyyy-MM-dd_hh-mm-ss};{1}</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
